# assignment

./: .dockerignore  README.md  docker-compose.yml
mysql/initdb.d/: init.sql
nginx/: app.conf
was/: .env  Dockerfile  make_celery.py  pyproject.toml  run.py  wsgi.py
was/app/: __init__.py  config.py
was/app/controllers/: post_controller.py  schema.py  utils.py
was/app/entities/: post.py
was/app/repositories/: __init__.py  base_repository.py  post_repository.py
was/app/schema/: post_schema.py
was/app/services/: post_services.py
was/app/utils/: __init__.py
was/tests/: .coverage  conftest.py  pytest.ini
was/tests/controllers/: test_post_controller.py
